--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Juego de Adivinar el Numero</h1>
+        <h1>Juego de Adivinar el Numero x</h1>
         <p>Ingresa un numero entre 0 y 100:</p>
         <input type="number" id="numad" min="0" max="100">
         <button onclick="Verificar()">Adivinar</button>
